2015-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* rest-server/bin/app-dancer2.pl.in,
	  rest-server/bin/app.pl.in: Use @PERL@

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Vault.pm: Time::HiRes is not available everywhere.

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Set total_time to the time of amvault
	  on an amvault run.
	* perl/Amanda/Report.pm: Parse amvault FINISH line.
	* perl/Amanda/Vault.pm: Log a FINISH line.

2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Improve hint on message 2800231.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/extract_list.c: More fix if SAMBA_CLIENT is not
	  defined.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: More fix if SAMBA_CLIENT is not defined.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tests.swg: #include "glib-util.h"
	* client-src/selfcheck.c, common-src/ammessage.c,
	  recover-src/extract_list.c, server-src/driver.c: Fix bug found by
	  coverity.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: #include "glib-util.h",
	* ndmp-src/ndmpconnobj.c (ndmp_connection_mover_connect):  return a
	  gboolean.
	* perl/Amanda/Tests.swg: #include "glib-init.h"
	* perl/Amanda/Util.swg: #include "match.h"
	* perl/Amanda/Util.swg:  rename crc32 to crc32_add.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* config/compile, config/config.guess, config/config.sub,
	  config/depcomp, config/install-sh, config/missing,
	  config/test-driver, config/ylwrap: Newer version of files.

2015-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check auth on both local and client check.

2015-05-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Improve message 2800231.
	* server-src/amcheck.c: message 2800231 is an MSG_ERROR.
