@@ -60,9 +60,6 @@ $BUILT_DATE = "@BUILT_DATE@";
 $BUILT_REV = "@BUILT_REV@";
 $CC = "@CC@";
 $CHECK_USERID = "@CHECK_USERID@";
-$CLIENT_HOST_INSTANCE = "@CLIENT_HOST_INSTANCE@";
-$CLIENT_HOST_KEY_FILE = "@CLIENT_HOST_KEY_FILE@";
-$CLIENT_HOST_PRINCIPAL = "@CLIENT_HOST_PRINCIPAL@";
 $CLIENT_LOGIN = "@CLIENT_LOGIN@";
 $COMPRESS_BEST_OPT = "@COMPRESS_BEST_OPT@";
 $COMPRESS_FAST_OPT = "@COMPRESS_FAST_OPT@";
@@ -94,13 +91,9 @@ $REST_EXTENSIONS_DIR = "@REST_EXTENSIONS_DIR@";
 $RESTORE = "@RESTORE@";
 $RSH_SECURITY = "@RSH_SECURITY@";
 $SAMBA_CLIENT = "@SAMBA_CLIENT@";
-$SERVER_HOST_INSTANCE = "@SERVER_HOST_INSTANCE@";
-$SERVER_HOST_KEY_FILE = "@SERVER_HOST_KEY_FILE@";
-$SERVER_HOST_PRINCIPAL = "@SERVER_HOST_PRINCIPAL@";
 $SSH_SECURITY = "@SSH_SECURITY@";
 $STAR = "@STAR@";
 $SUNTAR = "@SUNTAR@";
-$TICKET_LIFETIME = "@TICKET_LIFETIME@";
 $UNCOMPRESS_OPT = "@UNCOMPRESS_OPT@";
 $UNCOMPRESS_PATH = "@UNCOMPRESS_PATH@";
 $SORT_PATH = "@SORT_PATH@";
